tests/output/self_hosted/union_nested_duplicate_error.txt
tests/union_nested_duplicate_error.oomph:2: error: repeated union member 'Str'

    typedef Bad = Str | Inner
                  ^^^^^^^^^^^

